tweak to tab content

--- a/sitecomber/apps/config/templates/config/site_detail.html
+++ b/sitecomber/apps/config/templates/config/site_detail.html
@@ -25,11 +25,11 @@
       
       {% else %}
 
-      <li>(So far) Found <strong>{{object.internal_page_results|length}}</strong> internal pages, with <strong>{{object.external_page_results|length}}</strong> outgoing links. <strong>{{object.uncrawled_page_results|length}}</strong> pages left to crawl</li>
+      <li>(So far) Found <strong>{{object.internal_page_results|length}}</strong> internal pages, with <strong>{{object.external_page_results|length}}</strong> outgoing links. <strong>{{object.uncrawled_page_results|length}}</strong> pages left to crawl.</li>
 
       {% endif %}
 
-      <li><strong class="text-danger">{{object.pages_with_errors|length}}</strong> pages with errors</li>
+      <li><strong class="text-danger">{{object.pages_with_errors|length}}</strong> pages with errors.</li>
 
     </ul>
 
