--- a/sitecomber/apps/shared/templates/base.html
+++ b/sitecomber/apps/shared/templates/base.html
@@ -49,9 +49,9 @@
       <div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
         <header class="masthead mb-auto">
           <div class="inner">
-            <h3 class="masthead-brand">SiteComber</h3>
+            <a href="/"><h3 class="masthead-brand text-light">SiteComber</h3></a>
             <nav class="nav nav-masthead justify-content-center">
-              <a class="nav-link active" href="/">Home</a>
+              <a class="nav-link active" href="/">Results</a>
               <a class="nav-link" href="/admin/">Configure</a>
               <a class="nav-link" href="https://github.com/ninapavlich/sitecomber">Source</a>
             </nav>
