--- a/frontend/styles/_ui.scss
+++ b/frontend/styles/_ui.scss
@@ -1,3 +1,9 @@
+.breadcrumb{
+  background: $gray-900;
+}
+.breadcrumb-item + .breadcrumb-item::before{
+  content:"|";
+}
 dl{
   display: block;
   padding: 1em;
