--- a/frontend/styles/_vars.scss
+++ b/frontend/styles/_vars.scss
@@ -36,7 +36,7 @@ $grays: map-merge(
   $grays
 );
 
-$blue:    #0296be !default;
+$blue:    #00adba !default;
 $indigo:  #6610f2 !default;
 $purple:  #6f42c1 !default;
 $pink:    #e83e8c !default;
