--- a/sitecomber/apps/shared/static/main.css
+++ b/sitecomber/apps/shared/static/main.css
@@ -1,6 +1,6 @@
 /* OVERRIDE VARIABLES */
 :root {
-  --blue: #0296be;
+  --blue: #00adba;
   --indigo: #6610f2;
   --purple: #6f42c1;
   --pink: #e83e8c;
@@ -13,7 +13,7 @@
   --white: #fff;
   --gray: #6c757d;
   --gray-dark: #343a40;
-  --primary: #0296be;
+  --primary: #00adba;
   --secondary: #6c757d;
   --success: #67a728;
   --info: #17a2b8;
@@ -183,11 +183,11 @@ sup {
   top: -.5em; }
 
 a {
-  color: #0296be;
+  color: #00adba;
   text-decoration: none;
   background-color: transparent; }
   a:hover {
-    color: #015a72;
+    color: #00666e;
     text-decoration: underline; }
 
 a:not([href]):not([tabindex]) {
@@ -1126,19 +1126,19 @@ pre {
 .table-primary,
 .table-primary > th,
 .table-primary > td {
-  background-color: #b8e2ed; }
+  background-color: #b8e8ec; }
 
 .table-primary th,
 .table-primary td,
 .table-primary thead th,
 .table-primary tbody + tbody {
-  border-color: #7bc8dd; }
+  border-color: #7ad4db; }
 
 .table-hover .table-primary:hover {
-  background-color: #a4dae8; }
+  background-color: #a4e1e7; }
   .table-hover .table-primary:hover > td,
   .table-hover .table-primary:hover > th {
-    background-color: #a4dae8; }
+    background-color: #a4e1e7; }
 
 .table-secondary,
 .table-secondary > th,
@@ -1362,9 +1362,9 @@ pre {
   .form-control:focus {
     color: #495057;
     background-color: #fff;
-    border-color: #42d5fd;
+    border-color: #3bf1ff;
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(2, 150, 190, 0.25); }
+    box-shadow: 0 0 0 0.2rem rgba(0, 173, 186, 0.25); }
   .form-control::placeholder {
     color: #6c757d;
     opacity: 1; }
@@ -1739,7 +1739,7 @@ textarea.form-control {
     text-decoration: none; }
   .btn:focus, .btn.focus {
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(2, 150, 190, 0.25); }
+    box-shadow: 0 0 0 0.2rem rgba(0, 173, 186, 0.25); }
   .btn.disabled, .btn:disabled {
     opacity: 0.65; }
 
@@ -1749,26 +1749,26 @@ fieldset:disabled a.btn {
 
 .btn-primary {
   color: #fff;
-  background-color: #0296be;
-  border-color: #0296be; }
+  background-color: #00adba;
+  border-color: #00adba; }
   .btn-primary:hover {
     color: #fff;
-    background-color: #027898;
-    border-color: #016e8c; }
+    background-color: #008994;
+    border-color: #007e87; }
   .btn-primary:focus, .btn-primary.focus {
-    box-shadow: 0 0 0 0.2rem rgba(40, 166, 200, 0.5); }
+    box-shadow: 0 0 0 0.2rem rgba(38, 185, 196, 0.5); }
   .btn-primary.disabled, .btn-primary:disabled {
     color: #fff;
-    background-color: #0296be;
-    border-color: #0296be; }
+    background-color: #00adba;
+    border-color: #00adba; }
   .btn-primary:not(:disabled):not(.disabled):active, .btn-primary:not(:disabled):not(.disabled).active,
   .show > .btn-primary.dropdown-toggle {
     color: #fff;
-    background-color: #016e8c;
-    border-color: #01647f; }
+    background-color: #007e87;
+    border-color: #00727a; }
     .btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-primary.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0.2rem rgba(40, 166, 200, 0.5); }
+      box-shadow: 0 0 0 0.2rem rgba(38, 185, 196, 0.5); }
 
 .btn-secondary {
   color: #fff;
@@ -1932,25 +1932,25 @@ fieldset:disabled a.btn {
       box-shadow: 0 0 0 0.2rem rgba(82, 88, 93, 0.5); }
 
 .btn-outline-primary {
-  color: #0296be;
-  border-color: #0296be; }
+  color: #00adba;
+  border-color: #00adba; }
   .btn-outline-primary:hover {
     color: #fff;
-    background-color: #0296be;
-    border-color: #0296be; }
+    background-color: #00adba;
+    border-color: #00adba; }
   .btn-outline-primary:focus, .btn-outline-primary.focus {
-    box-shadow: 0 0 0 0.2rem rgba(2, 150, 190, 0.5); }
+    box-shadow: 0 0 0 0.2rem rgba(0, 173, 186, 0.5); }
   .btn-outline-primary.disabled, .btn-outline-primary:disabled {
-    color: #0296be;
+    color: #00adba;
     background-color: transparent; }
   .btn-outline-primary:not(:disabled):not(.disabled):active, .btn-outline-primary:not(:disabled):not(.disabled).active,
   .show > .btn-outline-primary.dropdown-toggle {
     color: #fff;
-    background-color: #0296be;
-    border-color: #0296be; }
+    background-color: #00adba;
+    border-color: #00adba; }
     .btn-outline-primary:not(:disabled):not(.disabled):active:focus, .btn-outline-primary:not(:disabled):not(.disabled).active:focus,
     .show > .btn-outline-primary.dropdown-toggle:focus {
-      box-shadow: 0 0 0 0.2rem rgba(2, 150, 190, 0.5); }
+      box-shadow: 0 0 0 0.2rem rgba(0, 173, 186, 0.5); }
 
 .btn-outline-secondary {
   color: #6c757d;
@@ -2101,10 +2101,10 @@ fieldset:disabled a.btn {
 
 .btn-link {
   font-weight: 400;
-  color: #0296be;
+  color: #00adba;
   text-decoration: none; }
   .btn-link:hover {
-    color: #015a72;
+    color: #00666e;
     text-decoration: underline; }
   .btn-link:focus, .btn-link.focus {
     text-decoration: underline;
@@ -2336,7 +2336,7 @@ input[type="button"].btn-block {
   .dropdown-item.active, .dropdown-item:active {
     color: #fff;
     text-decoration: none;
-    background-color: #0296be; }
+    background-color: #00adba; }
   .dropdown-item.disabled, .dropdown-item:disabled {
     color: #6c757d;
     pointer-events: none;
@@ -2609,16 +2609,16 @@ input[type="button"].btn-block {
   opacity: 0; }
   .custom-control-input:checked ~ .custom-control-label::before {
     color: #fff;
-    border-color: #0296be;
-    background-color: #0296be; }
+    border-color: #00adba;
+    background-color: #00adba; }
   .custom-control-input:focus ~ .custom-control-label::before {
-    box-shadow: 0 0 0 0.2rem rgba(2, 150, 190, 0.25); }
+    box-shadow: 0 0 0 0.2rem rgba(0, 173, 186, 0.25); }
   .custom-control-input:focus:not(:checked) ~ .custom-control-label::before {
-    border-color: #42d5fd; }
+    border-color: #3bf1ff; }
   .custom-control-input:not(:disabled):active ~ .custom-control-label::before {
     color: #fff;
-    background-color: #75e0fe;
-    border-color: #75e0fe; }
+    background-color: #6ef5ff;
+    border-color: #6ef5ff; }
   .custom-control-input:disabled ~ .custom-control-label {
     color: #6c757d; }
     .custom-control-input:disabled ~ .custom-control-label::before {
@@ -2656,17 +2656,17 @@ input[type="button"].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 8 8'%3e%3cpath fill='%23fff' d='M6.564.75l-3.59 3.612-1.538-1.55L0 4.26 2.974 7.25 8 2.193z'/%3e%3c/svg%3e"); }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::before {
-  border-color: #0296be;
-  background-color: #0296be; }
+  border-color: #00adba;
+  background-color: #00adba; }
 
 .custom-checkbox .custom-control-input:indeterminate ~ .custom-control-label::after {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 4'%3e%3cpath stroke='%23fff' d='M0 2h4'/%3e%3c/svg%3e"); }
 
 .custom-checkbox .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(2, 150, 190, 0.5); }
+  background-color: rgba(0, 173, 186, 0.5); }
 
 .custom-checkbox .custom-control-input:disabled:indeterminate ~ .custom-control-label::before {
-  background-color: rgba(2, 150, 190, 0.5); }
+  background-color: rgba(0, 173, 186, 0.5); }
 
 .custom-radio .custom-control-label::before {
   border-radius: 50%; }
@@ -2675,7 +2675,7 @@ input[type="button"].btn-block {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='-4 -4 8 8'%3e%3ccircle r='3' fill='%23fff'/%3e%3c/svg%3e"); }
 
 .custom-radio .custom-control-input:disabled:checked ~ .custom-control-label::before {
-  background-color: rgba(2, 150, 190, 0.5); }
+  background-color: rgba(0, 173, 186, 0.5); }
 
 .custom-switch {
   padding-left: 2.25rem; }
@@ -2699,7 +2699,7 @@ input[type="button"].btn-block {
     background-color: #fff;
     transform: translateX(0.75rem); }
   .custom-switch .custom-control-input:disabled:checked ~ .custom-control-label::before {
-    background-color: rgba(2, 150, 190, 0.5); }
+    background-color: rgba(0, 173, 186, 0.5); }
 
 .custom-select {
   display: inline-block;
@@ -2717,9 +2717,9 @@ input[type="button"].btn-block {
   border-radius: 0.25rem;
   appearance: none; }
   .custom-select:focus {
-    border-color: #42d5fd;
+    border-color: #3bf1ff;
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(2, 150, 190, 0.25); }
+    box-shadow: 0 0 0 0.2rem rgba(0, 173, 186, 0.25); }
     .custom-select:focus::-ms-value {
       color: #495057;
       background-color: #fff; }
@@ -2762,8 +2762,8 @@ input[type="button"].btn-block {
   margin: 0;
   opacity: 0; }
   .custom-file-input:focus ~ .custom-file-label {
-    border-color: #42d5fd;
-    box-shadow: 0 0 0 0.2rem rgba(2, 150, 190, 0.25); }
+    border-color: #3bf1ff;
+    box-shadow: 0 0 0 0.2rem rgba(0, 173, 186, 0.25); }
   .custom-file-input:disabled ~ .custom-file-label {
     background-color: #e9ecef; }
   .custom-file-input:lang(en) ~ .custom-file-label::after {
@@ -2810,18 +2810,18 @@ input[type="button"].btn-block {
   .custom-range:focus {
     outline: none; }
     .custom-range:focus::-webkit-slider-thumb {
-      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(2, 150, 190, 0.25); }
+      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 173, 186, 0.25); }
     .custom-range:focus::-moz-range-thumb {
-      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(2, 150, 190, 0.25); }
+      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 173, 186, 0.25); }
     .custom-range:focus::-ms-thumb {
-      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(2, 150, 190, 0.25); }
+      box-shadow: 0 0 0 1px #fff, 0 0 0 0.2rem rgba(0, 173, 186, 0.25); }
   .custom-range::-moz-focus-outer {
     border: 0; }
   .custom-range::-webkit-slider-thumb {
     width: 1rem;
     height: 1rem;
     margin-top: -0.25rem;
-    background-color: #0296be;
+    background-color: #00adba;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2830,7 +2830,7 @@ input[type="button"].btn-block {
       .custom-range::-webkit-slider-thumb {
         transition: none; } }
     .custom-range::-webkit-slider-thumb:active {
-      background-color: #75e0fe; }
+      background-color: #6ef5ff; }
   .custom-range::-webkit-slider-runnable-track {
     width: 100%;
     height: 0.5rem;
@@ -2842,7 +2842,7 @@ input[type="button"].btn-block {
   .custom-range::-moz-range-thumb {
     width: 1rem;
     height: 1rem;
-    background-color: #0296be;
+    background-color: #00adba;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2851,7 +2851,7 @@ input[type="button"].btn-block {
       .custom-range::-moz-range-thumb {
         transition: none; } }
     .custom-range::-moz-range-thumb:active {
-      background-color: #75e0fe; }
+      background-color: #6ef5ff; }
   .custom-range::-moz-range-track {
     width: 100%;
     height: 0.5rem;
@@ -2866,7 +2866,7 @@ input[type="button"].btn-block {
     margin-top: 0;
     margin-right: 0.2rem;
     margin-left: 0.2rem;
-    background-color: #0296be;
+    background-color: #00adba;
     border: 0;
     border-radius: 1rem;
     transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
@@ -2875,7 +2875,7 @@ input[type="button"].btn-block {
       .custom-range::-ms-thumb {
         transition: none; } }
     .custom-range::-ms-thumb:active {
-      background-color: #75e0fe; }
+      background-color: #6ef5ff; }
   .custom-range::-ms-track {
     width: 100%;
     height: 0.5rem;
@@ -2959,7 +2959,7 @@ input[type="button"].btn-block {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
   color: #fff;
-  background-color: #0296be; }
+  background-color: #00adba; }
 
 .nav-fill .nav-item {
   flex: 1 1 auto;
@@ -3442,19 +3442,19 @@ input[type="button"].btn-block {
   padding: 0.5rem 0.75rem;
   margin-left: -1px;
   line-height: 1.25;
-  color: #0296be;
+  color: #00adba;
   background-color: #fff;
   border: 1px solid #dee2e6; }
   .page-link:hover {
     z-index: 2;
-    color: #015a72;
+    color: #00666e;
     text-decoration: none;
     background-color: #e9ecef;
     border-color: #dee2e6; }
   .page-link:focus {
     z-index: 2;
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(2, 150, 190, 0.25); }
+    box-shadow: 0 0 0 0.2rem rgba(0, 173, 186, 0.25); }
 
 .page-item:first-child .page-link {
   margin-left: 0;
@@ -3468,8 +3468,8 @@ input[type="button"].btn-block {
 .page-item.active .page-link {
   z-index: 1;
   color: #fff;
-  background-color: #0296be;
-  border-color: #0296be; }
+  background-color: #00adba;
+  border-color: #00adba; }
 
 .page-item.disabled .page-link {
   color: #6c757d;
@@ -3534,13 +3534,13 @@ input[type="button"].btn-block {
 
 .badge-primary {
   color: #fff;
-  background-color: #0296be; }
+  background-color: #00adba; }
   a.badge-primary:hover, a.badge-primary:focus {
     color: #fff;
-    background-color: #016e8c; }
+    background-color: #007e87; }
   a.badge-primary:focus, a.badge-primary.focus {
     outline: 0;
-    box-shadow: 0 0 0 0.2rem rgba(2, 150, 190, 0.5); }
+    box-shadow: 0 0 0 0.2rem rgba(0, 173, 186, 0.5); }
 
 .badge-secondary {
   color: #fff;
@@ -3649,13 +3649,13 @@ input[type="button"].btn-block {
     color: inherit; }
 
 .alert-primary {
-  color: #014e63;
-  background-color: #cceaf2;
-  border-color: #b8e2ed; }
+  color: #005a61;
+  background-color: #cceff1;
+  border-color: #b8e8ec; }
   .alert-primary hr {
-    border-top-color: #a4dae8; }
+    border-top-color: #a4e1e7; }
   .alert-primary .alert-link {
-    color: #002631; }
+    color: #002b2e; }
 
 .alert-secondary {
   color: #383d41;
@@ -3741,7 +3741,7 @@ input[type="button"].btn-block {
   color: #fff;
   text-align: center;
   white-space: nowrap;
-  background-color: #0296be;
+  background-color: #00adba;
   transition: width 0.6s ease; }
   @media (prefers-reduced-motion: reduce) {
     .progress-bar {
@@ -3804,8 +3804,8 @@ input[type="button"].btn-block {
   .list-group-item.active {
     z-index: 2;
     color: #fff;
-    background-color: #0296be;
-    border-color: #0296be; }
+    background-color: #00adba;
+    border-color: #00adba; }
 
 .list-group-horizontal {
   flex-direction: row; }
@@ -3901,15 +3901,15 @@ input[type="button"].btn-block {
   border-bottom: 0; }
 
 .list-group-item-primary {
-  color: #014e63;
-  background-color: #b8e2ed; }
+  color: #005a61;
+  background-color: #b8e8ec; }
   .list-group-item-primary.list-group-item-action:hover, .list-group-item-primary.list-group-item-action:focus {
-    color: #014e63;
-    background-color: #a4dae8; }
+    color: #005a61;
+    background-color: #a4e1e7; }
   .list-group-item-primary.list-group-item-action.active {
     color: #fff;
-    background-color: #014e63;
-    border-color: #014e63; }
+    background-color: #005a61;
+    border-color: #005a61; }
 
 .list-group-item-secondary {
   color: #383d41;
@@ -4535,12 +4535,12 @@ a.close.disabled {
   vertical-align: text-top !important; }
 
 .bg-primary {
-  background-color: #0296be !important; }
+  background-color: #00adba !important; }
 
 a.bg-primary:hover, a.bg-primary:focus,
 button.bg-primary:hover,
 button.bg-primary:focus {
-  background-color: #016e8c !important; }
+  background-color: #007e87 !important; }
 
 .bg-secondary {
   background-color: #6c757d !important; }
@@ -4635,7 +4635,7 @@ button.bg-dark:focus {
   border-left: 0 !important; }
 
 .border-primary {
-  border-color: #0296be !important; }
+  border-color: #00adba !important; }
 
 .border-secondary {
   border-color: #6c757d !important; }
@@ -6873,10 +6873,10 @@ button.bg-dark:focus {
   color: #fff !important; }
 
 .text-primary {
-  color: #0296be !important; }
+  color: #00adba !important; }
 
 a.text-primary:hover, a.text-primary:focus {
-  color: #015a72 !important; }
+  color: #00666e !important; }
 
 .text-secondary {
   color: #6c757d !important; }
@@ -7006,6 +7006,12 @@ body {
     float: left; }
   .nav-masthead {
     float: right; } }
+
+.breadcrumb {
+  background: #212529; }
+
+.breadcrumb-item + .breadcrumb-item::before {
+  content: "|"; }
 
 dl {
   display: block;
