adding article parsed view

--- a/frontend/styles/_ui.scss
+++ b/frontend/styles/_ui.scss
@@ -4,6 +4,12 @@
 .breadcrumb-item + .breadcrumb-item::before{
   content:"|";
 }
+article{
+  img{
+    max-width: 100%;
+  }
+}
+
 dl{
   display: block;
   padding: 1em;
