--- a/sitecomber/apps/shared/static/main.css
+++ b/sitecomber/apps/shared/static/main.css
@@ -7013,6 +7013,9 @@ body {
 .breadcrumb-item + .breadcrumb-item::before {
   content: "|"; }
 
+article img {
+  max-width: 100%; }
+
 dl {
   display: block;
   padding: 1em;
