fix link in header

--- a/sitecomber/apps/config/templates/config/site_detail.html
+++ b/sitecomber/apps/config/templates/config/site_detail.html
@@ -65,7 +65,7 @@
                 {% endif %}
                 {% endwith %}
 
-                <a href="{{object.url}}" target="_blank" class="float-right badge badge-secondary p-1 ml-2">Visit</a>
+                <a href="{{object.url}}" target="_blank" class="float-right badge badge-info p-1 ml-2 mt-1">Visit</a>
 
               </div>
             </div>
