--- a/sitecomber/apps/config/templates/config/site_detail.html
+++ b/sitecomber/apps/config/templates/config/site_detail.html
@@ -1,9 +1,7 @@
 {% extends 'base.html' %}
-
 {% block bodyclass %}{{block.super}} site-detail{% endblock %}
 
 {% block inner %}
-
 <nav aria-label="breadcrumb" class="my-4">
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="/">All Sites</a></li>
@@ -11,75 +9,81 @@
   </ol>
 </nav>
 
-
 <article class="main">
   <h1>{{object}}</h1>
-  <h2 class="text-secondary h5">{% for url in object.domains %}{{url}}{% if not forloop.last %}, {% endif %}{% endfor %}</h2>
+  <h2 class="text-secondary h5">
+    {% for url in object.domains %}{{url}}{% if not forloop.last %}, {% endif %}{% endfor %}
+  </h2>
 
   <aside>
-    
     <ul class="list-unstyled">
-      
       {% if object.has_fully_crawled_site %}
-      <li>Found <strong>{{object.internal_page_results|length}}</strong> internal pages, with <strong>{{object.external_page_results|length}}</strong> outgoing links.</li>
-      
+      <li>
+        Found <strong>{{object.internal_page_results|length}}</strong> internal
+        pages, with
+        <strong>{{object.external_page_results|length}}</strong> outgoing links.
+      </li>
       {% else %}
-
-      <li>(So far) Found <strong>{{object.internal_page_results|length}}</strong> internal pages, with <strong>{{object.external_page_results|length}}</strong> outgoing links. <strong>{{object.uncrawled_page_results|length}}</strong> pages left to crawl.</li>
-
+      <li>
+        (So far) Found
+        <strong>{{object.internal_page_results|length}}</strong> internal pages,
+        with <strong>{{object.external_page_results|length}}</strong> outgoing
+        links. <strong>{{object.uncrawled_page_results|length}}</strong> pages
+        left to crawl.
+      </li>
       {% endif %}
 
-      <li><strong class="text-danger">{{object.pages_with_errors|length}}</strong> pages with errors.</li>
-
+      <li>
+        <strong class="text-danger">{{object.pages_with_errors|length}}</strong>
+        pages with errors.
+      </li>
     </ul>
-
+    <ul class="list-unstyled clearfix">
+      <li class="float-right">
+        <a
+          href="#"
+          class="viewlink overview float-right badge badge-secondary p-1 ml-2 mt-1"
+          >Overview</a
+        >
+      </li>
+      <li class="float-right">
+        <a
+          href="#"
+          class="viewlink sitemap float-right badge badge-secondary p-1 ml-2 mt-1"
+          >Sitemap</a
+        >
+      </li>
+      <li class="float-right">
+        <a
+          href="#"
+          class="viewlink list float-right badge badge-info p-1 ml-2 mt-1"
+          >List</a
+        >
+      </li>
+    </ul>
   </aside>
 
-  <div>
+  <div class="" id="links">
+
+    <ul class="list-unstyled children">
+    {% for key, item in object.page_results_hierarchy.items %}
+      <li class="clearfix">
+      {% include 'config/partials/page_tree.html' with child=item %}
+      </li>
+    {% endfor %}
+    </ul>
+
+    {% comment %}
     <ul class="list-unstyled">
       {% for page_result in object.internal_page_results %}
       {% if not page_result.is_root %}
       <li>
-        <article class="card bg-secondary p-1">
-          
-          <div class="card-body p-1">
-            
-            <div class="d-flex bd-highlight">
-              <div class="p-2 flex-fill">
-                <a class="card-title" href="{% url 'page-result-detail' object.pk page_result.pk %}">
-                  <h1 class="h5 text-light m-0">{{page_result.title}} <span class="status-code status-code-{{page_result.latest_status_code}}" title="{{page_result.latest_status_code}}"></span></h1>
-                  <h2 class="h6 text-white-50 m-0">{{page_result.url}}</h2>
-                </a>
-              </div>
-              <div class="p-2 flex-fill text-right">
-
-                {% with errors=page_result.error_test_results %}
-                {% if errors|length > 0 %}
-                <span class="badge badge-danger p-1 ml-2" title="{% for error in errors %}{{error.message}}{% if not forloop.last %}, {%endif %}{% endfor %}">{{errors|length}} error{% if errors|length > 1 %}s{% endif %}</span>
-                {% endif %}
-                {% endwith %}
-
-                {% with errors=page_result.warning_test_results %}
-                {% if errors|length > 0 %}
-                <span class="badge badge-warning p-1 ml-2" title="{% for error in errors %}{{error.message}}{% if not forloop.last %}, {%endif %}{% endfor %}">{{errors|length}} warning{% if errors|length > 1 %}s{% endif %}</span>
-                {% endif %}
-                {% endwith %}
-
-                <a href="{{object.url}}" target="_blank" class="float-right badge badge-info p-1 ml-2 mt-1">Visit</a>
-
-              </div>
-            </div>
-
-            
-          </div>
-
-        </article>
+        {% include 'config/partials/page_preview.html' %}
       </li>
       {% endif %}
       {% endfor %}
     </ul>
+    {% endcomment %}
   </div>
-
-
 </article>
 {% endblock %}
