--- a/sitecomber/apps/results/templates/results/pageresult_detail.html
+++ b/sitecomber/apps/results/templates/results/pageresult_detail.html
@@ -1,144 +1,197 @@
-{% extends 'base.html' %}
-{% load results_tags %}
-
-{% block bodyclass %}{{block.super}} page-detail{% endblock %}
-
-{% block inner %}
+{% extends 'base.html' %} {% load results_tags %}
+{% block bodyclass %}{{block.super}} page-detail{% endblock %} {% block inner %}
 
 <nav aria-label="breadcrumb" class="my-4">
   <ol class="breadcrumb">
     <li class="breadcrumb-item"><a href="/">All Sites</a></li>
-    <li class="breadcrumb-item"><a href="{% url 'site-detail' object.site_domain.site.pk %}">{{object.site_domain.site}}</a></li>
+    <li class="breadcrumb-item">
+      <a href="{% url 'site-detail' object.site_domain.site.pk %}"
+        >{{object.site_domain.site}}</a
+      >
+    </li>
     <li class="breadcrumb-item active" aria-current="page">{{object.title}}</li>
   </ol>
 </nav>
-
 <article class="main">
   <div class="clearfix my-4">
     <div class="float-left">
       <h1 class="h3">{{object.title}}</h1>
-      <h2 class="h5 text-secondary"><a class="text-secondary" href="{{object.url}}" target="_blank">{{object.url}}</a></h2>
+      <h2 class="h5 text-secondary">
+        <a class="text-secondary" href="{{object.url}}" target="_blank"
+          >{{object.url}}</a
+        >
+      </h2>
 
       {% if object.latest_request and object.latest_request.response %}
-      <span class="text-muted">Last crawled on {{object.latest_request.load_start_time}}</span>
+      <span class="text-muted"
+        >Last crawled on {{object.latest_request.load_start_time}}</span
+      >
       {% else %}
-      <span class="text-muted">Page has not yet been crawled</span>
-      {% endif %}
+      <span class="text-muted">Page has not yet been crawled</span> {% endif %}
     </div>
-    <a href="{{object.url}}" target="_blank" class="float-right badge badge-info p-2">Visit</a>
+    <a
+      href="{{object.url}}"
+      target="_blank"
+      class="float-right badge badge-info p-2"
+      >Visit</a
+    >
   </div>
-
-  
-
   <div class="card text-dark">
     <div class="card-header">
       <ul class="nav nav-tabs card-header-tabs" role="tablist">
         <li class="nav-item">
-          <a class="nav-link active" href="#tests" role="tab" aria-controls="description" aria-selected="true">Test Results</a>
-        </li>
-
-        <li class="nav-item">
-          <a class="nav-link" href="#article" role="tab" aria-controls="deals" aria-selected="false">Article</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#seo" role="tab" aria-controls="deals" aria-selected="false">SEO</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#technical" role="tab" aria-controls="deals" aria-selected="false">Technical</a>
+          <a
+            class="nav-link active"
+            href="#tests"
+            role="tab"
+            aria-controls="description"
+            aria-selected="true"
+            >Test Results</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#accessibility" role="tab" aria-controls="deals" aria-selected="false">Accessibility</a>
+          <a
+            class="nav-link"
+            href="#article"
+            role="tab"
+            aria-controls="deals"
+            aria-selected="false"
+            >Article</a
+          >
         </li>
-
         <li class="nav-item">
-          <a class="nav-link"  href="#request" role="tab" aria-controls="history" aria-selected="false">Request Details</a>
+          <a
+            class="nav-link"
+            href="#seo"
+            role="tab"
+            aria-controls="deals"
+            aria-selected="false"
+            >SEO</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#links" role="tab" aria-controls="deals" aria-selected="false">Incoming &amp; Outgoing Links</a>
+          <a
+            class="nav-link"
+            href="#technical"
+            role="tab"
+            aria-controls="deals"
+            aria-selected="false"
+            >Technical</a
+          >
         </li>
-        
-
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            href="#accessibility"
+            role="tab"
+            aria-controls="deals"
+            aria-selected="false"
+            >Accessibility</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            href="#request"
+            role="tab"
+            aria-controls="history"
+            aria-selected="false"
+            >Request Details</a
+          >
+        </li>
+        <li class="nav-item">
+          <a
+            class="nav-link"
+            href="#links"
+            role="tab"
+            aria-controls="deals"
+            aria-selected="false"
+            >Incoming &amp; Outgoing Links</a
+          >
+        </li>
       </ul>
     </div>
     <div class="card-body">
-       <div class="tab-content mt-3">
-
-
-
+      <div class="tab-content mt-3">
         <div class="tab-pane active" id="tests" role="tabpanel">
           <ul class="list-unstyled">
             {% for result in object.test_results %}
             <li class="p-2 my-2 alert alert-{{result.bootstrap_class}}">
-              <strong data-id="{{result.test}}">{{result.test_title}}</strong> {{result.message|safe}}
+              <strong data-id="{{result.test}}">{{result.test_title}}</strong>
+              {{result.message|safe}}
             </li>
             {% endfor %}
           </ul>
         </div>
 
-
         <div class="tab-pane" id="article" role="tabpanel">
-          {% get_test_result_by_type object "sitecomber_article_tests.tests.ReaderViewTest" as reader_test %}
-          {% get_test_result_by_type object "sitecomber_article_tests.tests.ArticleReadTimeInfo" as readtime_test %}
-          {% get_test_result_by_type object "sitecomber_article_tests.tests.SpellCheckTest" as spell_check_test %}
-          {% get_test_result_by_type object "sitecomber_article_tests.tests.PlaceholderTextTest" as placeholder_text_test %}
-
-
-          {% if reader_test.success %}
+          {% get_test_result_by_type object
+          "sitecomber_article_tests.tests.ReaderViewTest" as reader_test %} {%
+          get_test_result_by_type object
+          "sitecomber_article_tests.tests.ArticleReadTimeInfo" as readtime_test
+          %} {% get_test_result_by_type object
+          "sitecomber_article_tests.tests.SpellCheckTest" as spell_check_test %}
+          {% get_test_result_by_type object
+          "sitecomber_article_tests.tests.PlaceholderTextTest" as
+          placeholder_text_test %} {% if reader_test.success %}
           <h4 class="text-info">Article Detected:</h4>
           <article class="mb-4 p-4 bg-light rounded">
             <h1>{{reader_test.data_json.article.title}}</h1>
             {% if reader_test.status == 'success' %}
-            <small><strong>Read time:</strong> {{readtime_test.data_json.read_time}}</small>
-            {% endif %}
-
-            {% if reader_test.data_json.article.publish_date %}
+            <small
+              ><strong>Read time:</strong>
+              {{readtime_test.data_json.read_time}}</small
+            >
+            {% endif %} {% if reader_test.data_json.article.publish_date %}
             <h3>{{reader_test.data_json.article.publish_date}}</h3>
             {% else %}
             <h3 class="text-danger">No publish date identified</h3>
-            {% endif %}
-            
-            {% if reader_test.data_json.article.authors %}
+            {% endif %} {% if reader_test.data_json.article.authors %}
             <h4>{{reader_test.data_json.article.authors}}</h4>
             {% else %}
             <h4 class="text-danger">No authors identified</h4>
-            {% endif %}
-
-            {% if reader_test.data_json.article.top_image %}
-            <img src="{{reader_test.data_json.article.top_image}}" alt="Top image for {{reader_test.data_json.article.title}}" class="my-4"/>
+            {% endif %} {% if reader_test.data_json.article.top_image %}
+            <img
+              src="{{reader_test.data_json.article.top_image}}"
+              alt="Top image for {{reader_test.data_json.article.title}}"
+              class="my-4"
+            />
             {% else %}
             <h4 class="text-danger">No top image identified</h4>
-            {% endif %}
-
-            {% if reader_test.data_json.article.text %}
-            <main class="my-2">{{reader_test.data_json.article.text|linebreaks|highlight_spelling_errors:spell_check_test.data_json.misspelled_words}}</main>
+            {% endif %} {% if reader_test.data_json.article.text %}
+            <main class="my-2">
+              {{reader_test.data_json.article.text|linebreaks|highlight_spelling_errors:spell_check_test.data_json.misspelled_words}}
+            </main>
             {% else %}
             <h4 class="text-danger">No article text identified</h4>
             {% endif %}
-
-            
-            
-            
-
           </article>
           {% else %}
-          <strong class="text-danger">{{reader_test.message|safe}}</strong>
-          {% endif %}
-
-          
-          {% if spell_check_test.success %}
-          <h4 class="text-info">No misspelled words found.<h4>
+          <strong class="text-danger">{{reader_test.message|safe}}</strong> {%
+          endif %} {% if spell_check_test.success %}
+          <h4 class="text-info">No misspelled words found.</h4>
           {% else %}
-          <h4 class="text-danger">Found {{spell_check_test.data_json.misspelled_words|length}} misspellings: {% for word in spell_check_test.data_json.misspelled_words %}{{word}}{% if not forloop.last %}, {% endif %}{% endfor %}</h4>
-          {% endif %}
-
-
-          
-          {% if placeholder_text_test.success %}
-          <h4 class="text-info">No placeholder text found. Words searched were {% for word in placeholder_text_test.data_json.placeholder_words_searched %}{{word}}{% if not forloop.last %}, {% endif %}{% endfor %}</h4>
+          <h4 class="text-danger">
+            Found {{spell_check_test.data_json.misspelled_words|length}}
+            misspellings: {% for word in
+            spell_check_test.data_json.misspelled_words %}{{word}}{% if not
+            forloop.last %}, {% endif %}{% endfor %}
+          </h4>
+          {% endif %} {% if placeholder_text_test.success %}
+          <h4 class="text-info">
+            No placeholder text found. Words searched were {% for word in
+            placeholder_text_test.data_json.placeholder_words_searched
+            %}{{word}}{% if not forloop.last %}, {% endif %}{% endfor %}
+          </h4>
           {% else %}
-          <h4 class="text-danger">Found {{placeholder_text_test.data_json.placeholder_words_found|length}} placeholder words: {% for word in placeholder_text_test.data_json.placeholder_words_found %}{{word}}{% if not forloop.last %}, {% endif %}{% endfor %}</h4>
+          <h4 class="text-danger">
+            Found
+            {{placeholder_text_test.data_json.placeholder_words_found|length}}
+            placeholder words: {% for word in
+            placeholder_text_test.data_json.placeholder_words_found %}{{word}}{%
+            if not forloop.last %}, {% endif %}{% endfor %}
+          </h4>
           {% endif %}
-          
         </div>
 
         <div class="tab-pane" id="seo" role="tabpanel">
@@ -149,92 +202,109 @@
             <li>Duplicate content warning</li>
             <li>Sitemap warning</li>
           </ul>
-
         </div>
-
         <div class="tab-pane" id="technical" role="tabpanel">
           Technical TODO
           <ul>
             <li>HTML Validation</li>
             <li>Page speed test via Google API</li>
-            <li>Validate server security (certificate, known vulnerabilities)</li>
+            <li>
+              Validate server security (certificate, known vulnerabilities)
+            </li>
           </ul>
-
         </div>
-
         <div class="tab-pane" id="accessibility" role="tabpanel">
           Accessibility TODO
           <ul>
             <li>Image and video alt text</li>
           </ul>
-
         </div>
-         
-
-        <div class="tab-pane" id="request" role="tabpanel" aria-labelledby="history-tab">  
-          {% if object.latest_request %}
-          {% if object.latest_request.response %}
+        <div
+          class="tab-pane"
+          id="request"
+          role="tabpanel"
+          aria-labelledby="history-tab"
+        >
+          {% if object.latest_request %} {% if object.latest_request.response %}
           <h4>Request Path</h4>
           <ul class="list-unstyled">
-            <li><strong>{{object.latest_request.method}}</strong> on {{object.latest_request.load_start_time}}</li>
+            <li>
+              <strong>{{object.latest_request.method}}</strong> on
+              {{object.latest_request.load_start_time}}
+            </li>
             {% for response in object.response_list %}
-            <li><strong>{{response.status_code}}</strong> {{response.response_url}} [{{response.content_type}}{% if response.content_length %} - {{response.content_length}}{% endif %}] <em>{{response.time_elapsed_ms}}ms</em></li>
+            <li>
+              <strong>{{response.status_code}}</strong>
+              {{response.response_url}} [{{response.content_type}}{% if
+              response.content_length %} - {{response.content_length}}{% endif
+              %}] <em>{{response.time_elapsed_ms}}ms</em>
+            </li>
             {% endfor %}
           </ul>
           {% endif %}
-
           <div class="clearfix mt-4">
             <h4>Request Headers</h4>
-
             <div class="border rounded bg-light clearfix">
               <dl>
-              {% for key, value in object.latest_request.request_header_json.items %}
+                {% for key, value in
+                object.latest_request.request_header_json.items %}
                 <dt>{{key}}</dt>
                 <dd>{{value}}</dd>
-              {% endfor %}
+                {% endfor %}
               </dl>
             </div>
           </div>
-
           <div class="clearfix mt-4">
             <h4>Response Headers</h4>
-
             <div class="border rounded bg-light clearfix">
-
               {% if object.latest_request.response %}
               <dl>
-              {% for key, value in object.latest_request.response.response_header_json.items %}
+                {% for key, value in
+                object.latest_request.response.response_header_json.items %}
                 <dt>{{key}}</dt>
                 <dd>{{value}}</dd>
-              {% endfor %}
+                {% endfor %}
               </dl>
               {% else %}
               <p>Page response hasn't been recorded</p>
               {% endif %}
-
             </div>
           </div>
-
           {% if object.latest_request.response.text_content %}
           <h4 class="mt-4">Source</h4>
           <div class="border rounded bg-light p-3">
             <pre>{{object.latest_request.response.enumerated_source}}</pre>
           </div>
-          {% endif %}
-
-          {% else %}
+          {% endif %} {% else %}
           <p>Page hasn't been loaded yet</p>
           {% endif %}
         </div>
-         
 
-
-
-        <div class="tab-pane" id="links" role="tabpanel" aria-labelledby="deals-tab">
+        <div
+          class="tab-pane"
+          id="links"
+          role="tabpanel"
+          aria-labelledby="deals-tab"
+        >
           <h4>Incoming links from within {{object.site_domain.site}}</h4>
           <ul class="list-unstyled">
             {% for link in object.incoming_links_with_prefetch.all %}
-            <li class="my-1 clearfix"><a href="{% url 'page-result-detail' link.site_domain.site.pk link.pk %}">{{link.url}} <span class="status-code status-code-{{link.latest_status_code}}" title="{{link.latest_status_code}}"></span></a> <a class="float-right badge badge-info p-2" href="{{link.url}}" target="_blank">Visit</a></li>
+            <li class="my-1 clearfix">
+              <a
+                href="{% url 'page-result-detail' link.site_domain.site.pk link.pk %}"
+                >{{link.url}}
+                <span
+                  class="status-code status-code-{{link.latest_status_code}}"
+                  title="{{link.latest_status_code}}"
+                ></span
+              ></a>
+              <a
+                class="float-right badge badge-info p-2"
+                href="{{link.url}}"
+                target="_blank"
+                >Visit</a
+              >
+            </li>
             {% empty %}
             <li>No internal links to this page found yet.</li>
             {% endfor %}
@@ -242,20 +312,29 @@
           <h4>Outgoing links</h4>
           <ul class="list-unstyled">
             {% for link in object.outgoing_links_with_prefetch.all %}
-            <li class="my-1 clearfix"><a href="{% url 'page-result-detail' link.site_domain.site.pk link.pk %}">{{link.url}} <span class="status-code status-code-{{link.latest_status_code}}" title="{{link.latest_status_code}}"></span></a> <a class="float-right badge badge-info p-2" href="{{link.url}}" target="_blank">Visit</a></li>
+            <li class="my-1 clearfix">
+              <a
+                href="{% url 'page-result-detail' link.site_domain.site.pk link.pk %}"
+                >{{link.url}}
+                <span
+                  class="status-code status-code-{{link.latest_status_code}}"
+                  title="{{link.latest_status_code}}"
+                ></span
+              ></a>
+              <a
+                class="float-right badge badge-info p-2"
+                href="{{link.url}}"
+                target="_blank"
+                >Visit</a
+              >
+            </li>
             {% empty %}
             <li>No outgoing links found on this page.</li>
             {% endfor %}
           </ul>
         </div>
-
-
-
-
       </div>
     </div>
   </div>
-
-
 </article>
 {% endblock %}
